z-index fix

--- a/src/app/onboarding-page/onboarding-chat/onboarding-chat.component.scss
+++ b/src/app/onboarding-page/onboarding-chat/onboarding-chat.component.scss
@@ -193,6 +193,7 @@ chat-form {
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 999;
   display: none;
   align-items: center;
   justify-content: center;
@@ -345,6 +346,7 @@ chat-form {
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 999;
     display: none;
     align-items: center;
     justify-content: center;
